--- a/hello.html
+++ b/hello.html
@@ -2,9 +2,9 @@
 <head>HTML</head>
 <body>
   <Form name="f">
-  <Input type="password" label="password" name="t1" size="20">
-  <Input type="password" label="retypepassword" name="t2" size="20">
-  <Input type="Button" value="submit" onClick=calc()>
+  <Input type="password" label="password" name="t1" size="20"/>
+  <Input type="password" label="retypepassword" name="t2" size="20"/>
+  <Input type="Button" value="submit" onClick=calc()/>
   </Form>
 <script type="text/javaScript">
 function cal()
